--- a/app/views/jedis/index.html.erb
+++ b/app/views/jedis/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Name</th>
       <th colspan="3"></th>
     </tr>
@@ -13,6 +14,7 @@
   <tbody>
     <% @jedis.each do |jedi| %>
       <tr>
+        <td><%= jedi.id %></td>
         <td><%= jedi.name %></td>
         <td><%= link_to 'Show', jedi %></td>
         <td><%= link_to 'Edit', edit_jedi_path(jedi) %></td>
