--- a/app/views/apprenticeships/index.html.erb
+++ b/app/views/apprenticeships/index.html.erb
@@ -26,4 +26,6 @@
 
 <br>
 
-<%= link_to 'New Apprenticeship', new_apprenticeship_path %>
+<%= link_to 'New Apprenticeship', new_apprenticeship_path %> |
+<%= link_to 'Jedi List', jedis_path %> |
+<%= link_to 'Padawan List', padawans_path %>
