--- a/app/views/jedis/index.html.erb
+++ b/app/views/jedis/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>ID</th>
       <th>Name</th>
+      <th>Padawans</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,9 @@
       <tr>
         <td><%= jedi.id %></td>
         <td><%= jedi.name %></td>
+        <td><% jedi.padawans.each do |padawan| %>
+            <%= padawan.name %><br>
+            <% end %></td>
         <td><%= link_to 'Show', jedi %></td>
         <td><%= link_to 'Edit', edit_jedi_path(jedi) %></td>
         <td><%= link_to 'Destroy', jedi, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,6 +28,11 @@
   </tbody>
 </table>
 
+
+
 <br>
 
-<%= link_to 'New Jedi', new_jedi_path %>
+<%= link_to 'New Jedi', new_jedi_path %> |
+<%= link_to 'Apprenticeships List', apprenticeships_path %> |
+<%= link_to 'Padawan List', padawans_path %>
+
