--- a/app/views/padawans/index.html.erb
+++ b/app/views/padawans/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>ID</th>
       <th>Name</th>
+      <th>Jedis</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,9 @@
       <tr>
         <td><%= padawan.id %></td>
         <th><%= padawan.name %></th>
+        <td><% padawan.jedis.each do |jedi| %>
+            <%= jedi.name %><br>
+            <% end %></td>
         <td><%= link_to 'Show', padawan %></td>
         <td><%= link_to 'Edit', edit_padawan_path(padawan) %></td>
         <td><%= link_to 'Destroy', padawan, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,4 +30,6 @@
 
 <br>
 
-<%= link_to 'New Padawan', new_padawan_path %>
+<%= link_to 'New Padawan', new_padawan_path %> |
+<%= link_to 'Apprenticeships List', apprenticeships_path %> |
+<%= link_to 'Jedi List', jedis_path %>
