added authentication and validations

--- a/app/views/apprenticeships/index.html.erb
+++ b/app/views/apprenticeships/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Jedi</th>
-      <th>Padawan</th>
+      <th>Jedi ID</th>
+      <th>Padawan ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
