--- a/app/views/padawans/index.html.erb
+++ b/app/views/padawans/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Name</th>
+      <th>Padawans</th>
       <th>Jedis</th>
       <th colspan="3"></th>
     </tr>
