--- a/app/views/padawans/index.html.erb
+++ b/app/views/padawans/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>ID</th>
+      <th>PadawanID</th>
       <th>Padawan</th>
       <th>Jedis</th>
       <th colspan="3"></th>
