--- a/app/views/jedis/index.html.erb
+++ b/app/views/jedis/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>jediID</th>
+      <th>jedi_id</th>
       <th>Jedi</th>
       <th>Padawans</th>
       <th colspan="3"></th>
